--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -571,7 +571,7 @@ body {
     color: #fff;
     font-weight: 700;
     text-transform: uppercase;
-    background-color: #0f33ff;
+    background-color: #c78550;
     border: none;
     opacity: 0;
     visibility: hidden;
@@ -739,7 +739,7 @@ body {
     left: 0;
     width: 30px;
     height: 4px;
-    background-color: #0f33ff
+    background-color: #c78550
 }
 
 .intro--banner h1 {
@@ -765,7 +765,7 @@ body {
     left: 23px;
     right: 0;
     height: 100%;
-    background-color: #0f33ff;
+    background-color: #c78550;
     z-index: -1;
     -webkit-transition: left .2s ease-in-out;
     transition: left .2s ease-in-out
@@ -1163,7 +1163,7 @@ body {
     left: 200px;
     -webkit-transform: rotate(-25deg);
     transform: rotate(-25deg);
-    border: 5px solid #0f33ff;
+    border: 5px solid black;
     border-right-color: transparent;
     border-bottom-color: transparent
 }
@@ -1177,7 +1177,7 @@ body {
     transform: rotate(45deg);
     width: 10px;
     height: 10px;
-    background-color: #0f33ff
+    background-color: black
 }
 
 .about--banner h2 {
@@ -1196,7 +1196,7 @@ body {
     left: 268px;
     width: 30px;
     height: 30px;
-    background-color: #0f33ff;
+    background-color: black;
     border-radius: 50%
 }
 
@@ -1252,7 +1252,7 @@ body {
     height: 75px;
     text-decoration: none;
     color: #8a8a8a;
-    border: 10px solid #0f33ff;
+    border: 10px solid black;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat
@@ -1523,9 +1523,10 @@ body {
     font-size: 16px;
     font-weight: 700;
     text-transform: uppercase;
-    background-color: #0f33ff;
+    background-color: #c78550;
     border: none;
-    border-radius: 0
+    border-radius: 0;
+    color: white;
 }
 
 .work-request input[type="submit"]:focus {
